feat: add custom font - Montserrat

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('/fonts/montserrat.ttf');
+}
+
+@font-face {
+	font-family: 'Montserrat Italic';
+	src: url('/fonts/montserrat-italic.ttf');
+}
+							
+:root [data-theme='wintry'] {
+  --theme-font-family-base: 'Montserrat', sans-serif;
+  --theme-font-family-heading: 'Montserrat', sans-serif;
+}
