--- a/src/app.css
+++ b/src/app.css
@@ -20,3 +20,7 @@
 .page {
 	@apply mx-auto w-full max-w-screen-xl px-4;
 }
+
+section.hero {
+	@apply page my-8 flex flex-col justify-between gap-4 md:flex-row;
+}
