--- a/src/app.css
+++ b/src/app.css
@@ -18,9 +18,19 @@
 }
 
 .page {
-	@apply mx-auto w-full max-w-screen-xl px-4;
+	@apply mx-auto w-full max-w-screen-xl px-4 lg:px-8;
 }
 
-section.hero {
+section.heroSection {
 	@apply page my-8 flex flex-col justify-between gap-4 md:flex-row;
+}
+
+section.cardSection {
+	@apply page space-y-8 px-4;
+}
+div.cardList {
+	@apply flex flex-col items-center gap-4 md:flex-row md:items-stretch;
+}
+article.cardCard {
+	@apply card variant-ghost-surface mx-auto flex max-w-prose flex-1 flex-col items-center justify-between space-y-4 p-4 text-center;
 }
